--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "mongodb": "~1.3.23",
     "q": "~1.0.0",
+    "bunyan": "~0.22.1",
+    "memwatch": "~0.2.2",
     "lodash": "~2.4.1"
   }
 }
